Desarrollo de Vistas Login, Register, passwordRecover, passwordReset y añadido favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>RODAE - Tu red social deportiva</title>
+    <meta name="description" content="RODAE es una red social para atletas y entrenadores. Conecta, comparte y entrena mejor." />
   </head>
   <body>
     <div id="app"></div>
